@@ -1,3 +1,7 @@
+2008-10-01  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9464: htmlArea RTE: url auto-detect feature not working in Firefox
+
 2008-10-01  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug #9442: SQL LIKE wildcards are not escaped correctly for list queries
@@ -10,7 +14,7 @@
 2008-09-29  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to issue #9375: Add DTD to htmlArea RTE iframe document
-	* Fixed bug 9449: htmlArea RTE: Opera sometimes raises a JavaScript error when the RTE closes
+	* Fixed bug #9449: htmlArea RTE: Opera sometimes raises a JavaScript error when the RTE closes
 
 2008-09-28  Oliver Hader  <oliver@typo3.org>
 
